// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.toHaveEmitted fails when the expected event [] has not been emitted by the wrapper 1`] = `
"
  [2mexpect([22m[31mreceived[39m[2m).toHaveEmitted([22m[32mexpected[39m[2m)[22m


  Expected wrapper to have emitted:

    [32m[][39m

  received:
    [31m\\"input, change, keyUp\\"[39m
  "
`;

exports[`.toHaveEmitted fails when the expected event {} has not been emitted by the wrapper 1`] = `
"
  [2mexpect([22m[31mreceived[39m[2m).toHaveEmitted([22m[32mexpected[39m[2m)[22m


  Expected wrapper to have emitted:

    [32m{}[39m

  received:
    [31m\\"input, change, keyUp\\"[39m
  "
`;

exports[`.toHaveEmitted fails when the expected event NaN has not been emitted by the wrapper 1`] = `
"
  [2mexpect([22m[31mreceived[39m[2m).toHaveEmitted([22m[32mexpected[39m[2m)[22m


  Expected wrapper to have emitted:

    [32mNaN[39m

  received:
    [31m\\"input, change, keyUp\\"[39m
  "
`;

exports[`.toHaveEmitted fails when the expected event change and payload { test: { data: [ {}, [length]: 1 ] } } combination has not been emitted 1`] = `
"
  [2mexpect([22m[31mreceived[39m[2m).toHaveEmitted([22m[32mexpected[39m[2m)[22m


  Expected wrapper to have emitted:

    [32m{\\"change\\": {\\"test\\": {\\"data\\": [{}]}}}[39m

  received:
    [31m{\\"test\\": {\\"data\\": {\\"foo\\": \\"bar\\"}}}[39m
  "
`;

exports[`.toHaveEmitted fails when the expected event input and payload { test: 'data' } combination has not been emitted 1`] = `
"
  [2mexpect([22m[31mreceived[39m[2m).toHaveEmitted([22m[32mexpected[39m[2m)[22m


  Expected wrapper to have emitted:

    [32m{\\"input\\": {\\"test\\": \\"data\\"}}[39m

  received:
    [31m{\\"data\\": \\"test\\"}[39m
  "
`;

exports[`.toHaveEmitted fails when the expected event keyDown has not been emitted by the wrapper 1`] = `
"
  [2mexpect([22m[31mreceived[39m[2m).toHaveEmitted([22m[32mexpected[39m[2m)[22m


  Expected wrapper to have emitted:

    [32m\\"keyDown\\"[39m

  received:
    [31m\\"input, change, keyUp\\"[39m
  "
`;

exports[`.toHaveEmitted fails when the expected event null has not been emitted by the wrapper 1`] = `
"
  [2mexpect([22m[31mreceived[39m[2m).toHaveEmitted([22m[32mexpected[39m[2m)[22m


  Expected wrapper to have emitted:

    [32mnull[39m

  received:
    [31m\\"input, change, keyUp\\"[39m
  "
`;

exports[`.toHaveEmitted fails when the expected event undefined has not been emitted by the wrapper 1`] = `
"
  [2mexpect([22m[31mreceived[39m[2m).toHaveEmitted([22m[32mexpected[39m[2m)[22m


  Expected wrapper to have emitted:

    [32mundefined[39m

  received:
    [31m\\"input, change, keyUp\\"[39m
  "
`;
